Fixed responsive design of header. Smaller logo will appear on mobile devices starting under 1200px.

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -5,13 +5,15 @@ body {
 	background-color: #dbd1c2;
 }
 
-#logo {
+#logo{
 	position: relative;
-	top: -65px;
-	z-index: 10;
 	background-image: url(../images/logo.png);
-	width: 200px;
-	height: 200px;
+	top: -65px;
+ 	display: inline-block;
+ 	height: auto;
+ 	width: 200px;
+ 	height: 200px;
+ 	z-index: 10;
 }
 
 #nav-wrapper {
@@ -50,10 +52,6 @@ body {
 	color: #db6836;
 }
 
-.navbar-brand {
-	height: 75px;
-}
-
 @media (max-width: 1200px) {
     .navbar-header {
         float: none;
@@ -82,14 +80,27 @@ body {
     .navbar-nav>li {
         float: none;        
     }
-    #home {
-    	margin-top: 30px;
-    }
     .navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
     }
     .collapse.in{
         display:block !important;
+    }
+    #logo{
+    	background-image: url(../images/logo-responsive.png);
+    	width: 100px;
+    	height: 100px;
+    	top: -40px;
+    }
+    #nav-wrapper {
+    	height: 50px;
+    	margin-top: 25px;
+    }
+    #navbar{
+    	margin-top: 0;
+    }
+    #home {
+    	margin-top: 5px;
     }
 }
